# auto_assigniment_back

./: .env.example  .gitignore  README.md  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml
app/: main.py
app/config/: cookies.py  security.py  settings.py  tortoise.py
app/dependencies/: auth.py
app/models/: assignment.py  document_record.py  refresh_token.py  topic.py  user.py
app/routes/: __init__.py  assignment.py  auth.py  document.py  onlyoffice.py  topic.py
app/schemas/: assignment.py  auth.py  document_record.py  topic.py
app/services/: auth_service.py  document_service.py  storage.py
migrations/models/: 0_20260515201419_init.py  0_20260520201857_init.py  1_20260515205837_add-topic-soft-delete.py  2_20260515234330_add-auth.py  3_20260516084847_document_record.py  4_20260516092954_assignment_user.py
tests/: conftest.py  test_assignments.py  test_auth.py  test_documents.py  test_root.py  test_topics.py
