[project]
name = "teste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aerich>=0.8.2",
    "aiosqlite>=0.22.1",
    "boto3>=1.40.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "tortoise-orm>=0.25.1,<1.0.0",
]

[tool.aerich]
tortoise_orm = "app.config.tortoise.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
pythonpath = ["."]
